# horizons

./: .gitignore  DECISIONS.md  OBSERVATIONS.md  README.md  SETUP.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/splits/: split_v1.json  split_v2.json
horizons/data/: dataset.py  features.py  init.py  loaders.py  masking.py  mesh.py  topo_distance.py
horizons/eval/: checkpoint.py  driver.py  harmonic_infill.py  per_surface.py  validate.py
horizons/models/: operator.py  placeholder.py
horizons/training/: loop.py  loss.py  rollout.py
scripts/: add_large_distributed.py  add_large_to_train.py  audit_ts_files.py  build_dataset.py  build_phase2_split.py  build_split.py  check_config.py  check_mesh.py  compare_runs.py  eval_plots.py  eval_run.py  noise_band.py  overfit_one.py  overfit_real.py  plot_crossover.py  profile_mps.py  setup_full_dataset.py  train.py  viz_fixture.py  viz_init.py  viz_masks.py
tests/: test_dataset.py  test_features.py  test_gradient_accumulation.py  test_harmonic_infill.py  test_hybrid.py  test_init.py  test_loop.py  test_loss.py  test_loss_full.py  test_lr_schedule.py  test_masking.py  test_mesh.py  test_operator.py  test_overfit.py  test_placeholder.py  test_rollout.py  test_topo_distance.py  test_ts_loader.py
tests/fixtures/: anticline.npz  generate_fixtures.py  plane.npz  sphere_cap.npz
